# ed25519-solidity

./: .gitignore  .gitmodules  README.md  foundry.toml
precomputations_server/: .env.example  Cargo.toml  Dockerfile  README.md  precompute.sh  rm.sh
precomputations_server/crypto/: precompute.sage
precomputations_server/src/: main.rs
sdk/: package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.mono.json
sdk/examples/webauthn-account/: .env.example  package-lock.json  package.json
sdk/examples/webauthn-account/src/app/: page.tsx
sdk/examples/webauthn-account/src/app/abis/: WebAuthnAccount.json
src/: FastElliptic.sol  IMFAAccount.sol  IWebAuthnAddOn.sol  MFAAccount.sol  WebAuthnAddOn.sol
src/account/: KeyPrecomputations.sol  WebAuthnAccount.sol
src/account/factory/: WebAuthnAccountFactory.sol
src/cryptography/: EllipticCurve.sol  FCL_Elliptic.sol  FastElliptic.sol  WrapECDSAPrecalculations.sol
src/precompiled/: fcl_ecdsa_precbytecode.json  fcl_ecdsa_precbytecode.sol
src/signature/: KeyPrecomputations.sol  SignatureValidation.sol
src/static/: Base64URL.sol  Structs.sol
test/: EllipticCurve.t.sol  FastElliptic.sol
test/account/: WebAuthnAccount.t.sol  WebAuthnAccountFactory.t.sol
test/cryptography/: EllipticCurve.t.sol  FastElliptic.t.sol
